--- a/sass/index.scss
+++ b/sass/index.scss
@@ -27,8 +27,7 @@ a:visited{
   caret-color: transparent;
 }
 .InputFocusColor{
-  border: white 2px solid !important;
-  outline: transparent;
+  outline: white 2px solid !important;
 }
 
 body{
